[package]
name = "rsa_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.44"
num-traits = "0.2.14"
timeit = "0.1.2"
hex = "0.4.3"